--- a/style.css
+++ b/style.css
@@ -12,10 +12,17 @@ canvas {
     image-rendering:pixelated;                 /* CSS4 Proposed  */
     -ms-interpolation-mode:nearest-neighbor;   /* IE8+           */
     width: 100%;
+    height: 100%;
+}
+html {
+    width: 100%;
+    height: 100%;
 }
 body {
     margin: 0;
     padding: 0;
+    width: 100%;
+    height: 100%;
 }
 .loadFont {
     font-family: 'ACastle3';
