--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: ACastle3;
-    src: url('/src/fonts/anothercastle3.ttf') format('truetype')
+    src: url('./src/fonts/anothercastle3.ttf') format('truetype')
 }
 canvas {
     width: 100%;
